<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/black"
    android:layout_height="230dp">


    <LinearLayout
        android:id="@+id/videoView_one_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="visible"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/videoView_go_back"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_weight="0"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_baseline_keyboard_backspace_24"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/videoView_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:maxLines="2"
            android:text="This is Title"
            android:textColor="@color/white" />

        <ImageButton
            android:id="@+id/videoView_more"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_weight="0"
            android:background="@android:color/transparent"
            android:src="@drawable/menu_more"
            tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

    </LinearLayout>

    <!--    <LinearLayout-->
    <!--        android:id="@+id/videoView_two_layout"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="180dp"-->
    <!--        android:layout_marginStart="30dp"-->
    <!--        android:layout_marginLeft="30dp"-->
    <!--        android:orientation="vertical"-->
    <!--        android:visibility="visible"-->
    <!--        app:layout_constraintBottom_toTopOf="@id/videoView_four_layout"-->
    <!--        app:layout_constraintLeft_toLeftOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@id/videoView_one_layout">-->


    <!--        <ImageView-->
    <!--            android:id="@+id/videoView_brightness_image"-->
    <!--            android:layout_width="24dp"-->
    <!--            android:layout_height="24dp"-->
    <!--            android:layout_marginStart="2dp"-->
    <!--            android:layout_marginLeft="2dp"-->
    <!--            android:layout_marginBottom="7dp"-->
    <!--            android:layout_weight="0"-->
    <!--            android:src="@drawable/video_brightness_four" />-->

    <!--&lt;!&ndash;        <SeekBar&ndash;&gt;-->
    <!--&lt;!&ndash;            android:id="@+id/videoView_brightness"&ndash;&gt;-->
    <!--&lt;!&ndash;            android:layout_width="130dp"&ndash;&gt;-->
    <!--&lt;!&ndash;            android:layout_height="wrap_content"&ndash;&gt;-->
    <!--&lt;!&ndash;            android:layout_marginStart="-50dp"&ndash;&gt;-->
    <!--&lt;!&ndash;            android:layout_marginLeft="-50dp"&ndash;&gt;-->
    <!--&lt;!&ndash;            android:layout_weight="1"&ndash;&gt;-->
    <!--&lt;!&ndash;            android:max="255"&ndash;&gt;-->
    <!--&lt;!&ndash;            android:progress="150"&ndash;&gt;-->
    <!--&lt;!&ndash;            android:progressBackgroundTint="@color/white"&ndash;&gt;-->
    <!--&lt;!&ndash;            android:progressTint="@color/red"&ndash;&gt;-->
    <!--&lt;!&ndash;            android:rotation="270"&ndash;&gt;-->
    <!--&lt;!&ndash;            android:scaleY="3"&ndash;&gt;-->
    <!--&lt;!&ndash;            android:thumb="@null"&ndash;&gt;-->
    <!--&lt;!&ndash;            tools:targetApi="lollipop" />&ndash;&gt;-->

    <!--    </LinearLayout>-->

    <LinearLayout
        android:id="@+id/videoView_three_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.3" />

        <ImageButton
            android:id="@+id/videoView_rewind"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_rewind"
            tools:ignore="SpeakableTextPresentCheck" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />


        <ImageButton
            android:id="@+id/videoView_play_pause_btn"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@android:color/transparent"
            android:src="@drawable/video_pause_button"
            tools:ignore="SpeakableTextPresentCheck" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />


        <ImageButton
            android:id="@+id/videoView_forward"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_forward"
            tools:ignore="SpeakableTextPresentCheck" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.3" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/videoView_four_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/videoView_four_one_child_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="bottom"
                android:orientation="horizontal"
                >


                <TextView
                    android:id="@+id/videoView_endtime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_00_00_00"
                    android:layout_marginLeft="20dp"
                    android:textColor="@color/white"
                    android:textSize="17sp" />
                <Space
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"/>
                <ImageButton
                    android:background="@android:color/transparent"
                    android:id="@+id/btn_full_screen"
                    android:layout_gravity="right"
                    android:src="@drawable/video_full_screen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <SeekBar
                android:id="@+id/videoView_seekbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:progress="40"
                android:progressBackgroundTint="@color/white"
                android:progressTint="@color/red"
                android:thumb="@drawable/custom_thumb"
                tools:targetApi="lollipop" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/videoView_four_two_child_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/video_five_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|bottom"
        android:orientation="vertical"
        android:padding="8dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:id="@+id/video_five_child_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/white_round"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="14dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:src="@drawable/video_lock_black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unlock_controls"
                android:textColor="@color/black"
                android:textStyle="bold" />


        </LinearLayout>

        <TextView
            android:id="@+id/videoView_lock_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:text="@string/screen_locked"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/videoView_lock_text_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tap_to_unlock"
            android:textColor="@color/white"
            android:textSize="10sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>