<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="com.iiex.videocommunity.viewmodels.ViewViewModel" />
    </data>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_height="match_parent"
            android:layout_width="match_parent">

            <!--  Video view    -->
            <RelativeLayout
                android:id="@+id/zoom_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <VideoView
                    android:id="@+id/videoView"
                    android:layout_width="match_parent"
                    android:layout_height="230dp"/>
                <include layout="@layout/custom_controls"/>
            </RelativeLayout>


            <!-- Drop layout to display video info -->
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/tv_title"
                        android:textSize="25dp"
                        android:text="This is title"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/tv_view"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="100 N views"
                            android:textSize="15dp"
                            android:layout_marginHorizontal="5dp"
                            tools:ignore="TextSizeCheck" />

                        <TextView
                            android:id="@+id/tv_created_at"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/jul_1_2022"
                            android:textSize="15dp"
                            android:layout_marginHorizontal="5dp"
                            tools:ignore="TextSizeCheck" />
                    </LinearLayout>
                    <TextView
                        android:id="@+id/tv_tags"
                        android:text="@string/tinhga_nger"
                        android:textColor="@color/blue"
                        android:layout_marginHorizontal="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>



                <ImageButton
                    android:id="@+id/btn_show_more"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:src="@drawable/ic_keyboard_arrow_down_24"
                    android:text="Hide"

                    tools:ignore="SpeakableTextPresentCheck" />

            </LinearLayout>
            <FrameLayout
                android:id="@+id/fragment_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/appBarLayout"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="40dp"/>
            <!-- Fragment VideoList -->
        </LinearLayout>
        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="220dp"
            >

            <FrameLayout
                android:id="@+id/design_bottom_sheet"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:behavior_hideable="true"
                app:behavior_peekHeight="0dp"
                app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

                <LinearLayout
                    android:background="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:elevation="10dp"
                        android:background="@color/white"
                        android:layout_gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tv_title_nestedscrollview"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="More Description"
                            android:textSize="25dp" />

                        <ImageButton
                            android:id="@+id/btn_close"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@color/white"
                            android:src="@drawable/ic_close"
                            tools:ignore="SpeakableTextPresentCheck" />
                    </LinearLayout>
                    <androidx.core.widget.NestedScrollView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <TextView
                                android:id="@+id/tv_title_bottom"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="This is title"
                                android:textSize="25dp"
                                android:textStyle="bold" />

                            <GridView
                                android:id="@+id/grid_item_text"
                                android:layout_width="match_parent"
                                android:layout_height="57dp"
                                android:numColumns="3"></GridView>

                            <TextView
                                android:id="@+id/tv_description"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/large_text" />
                        </LinearLayout>
                    </androidx.core.widget.NestedScrollView>

                </LinearLayout>
            </FrameLayout>
        </androidx.coordinatorlayout.widget.CoordinatorLayout>

    </RelativeLayout>
</layout>
